[project]
name = "comfyui-linear-theme"
description = "Dark minimal theme for ComfyUI inspired by Linear, Vercel, and Raycast. Pure black aesthetic, zinc scale, dot grid background, and ghost/outline buttons."
version = "1.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Arroz-11/ComfyUI-Linear-Theme"

[tool.comfy]
PublisherId = "agunode"
DisplayName = "Linear Theme"
Icon = ""
